--- a/quiz01.html
+++ b/quiz01.html
@@ -13,11 +13,13 @@
             <h2>12월 31일 할 일</h2>
             <hr>
             <div>
-                <span>오전 10시</span><br><span>아침밥 먹기</span>
+                <span>오전 10시</span><br>
+                <span>아침밥 먹기</span>
             </div>
             <hr>
             <div>
-                <span>오후 13시</span><br><span>점심밥 먹기</span>
+                <span>오후 13시</span><br>
+                <span>점심밥 먹기</span>
             </div>
         </div>
     </div>
